
   * Print proper error when a part of the repository is inaccessible during 
     fetch. (#323084)

   * Fix concurrent access problems during push/commit. (#248289)

   * Allow svn: revision specifier in non-svn branches. (#337295)

   * Cope with v3 and v4 mappings being interwined in a mainline 
     with roundtripped revisions. (#332364)

  PERFORMANCE

   * Significant speed improvements when no (old) tags have to be fetched. Requires 
     InterBranch.pull() patch.

   * The guessed layout is now only stored in the configuration and no longer 
     re-determined every time a repository is accessed.

   * Looking for missing revisions is now done in groups, significantly improving the 
     time spent in the "determining revisions to fetch" step.

   * A simple LRU cache is now used for texts during fetch.

   * Avoid loading subvertpy in a couple more situations when probing for 
     Subversion repositories. (#336449)

  FEATURES

   * Now prints parent Subversion revision number after successful pull. (#332196)

   * Annotate run against Subversion repositories now works. (#335735)

bzr-svn 0.5.2					2009-02-18

  BUG FIXES

   * Fix installation of cache module.

bzr-svn 0.5.1					2009-02-17

  BUG FIXES

   * Fix parsing of "trunk/tags" style filenames in trunk repository layout 
     handling. (#324970)

   * "bzr push" now also works when creating new branches. "bzr svn-push" 
     has been removed. This requires a patched version of bzr. (#127945)

   * Fixed memory usage and performance bug while iterating over a repository.
     (#318993)

   * When following prefixes, cope with branches copied from outside of the 
     prefix. (#325428)

   * Handle non-mainline history a bit better in dpush. (#329284)

   * Assume that ERR_XML_MALFORMED only occurs for non-Subversion 
     URLs. (#327287)

   * Only upgrade tags for which the revision they point to has been 
     upgraded in svn-upgrade.
