@@ -48,6 +48,9 @@ bzr-svn 0.5.3                   UNRELEASED
    * Cope with v3 and v4 mappings being interwined in a mainline 
      with roundtripped revisions. (#332364)
 
+   * Print proper error when it is impossible to get a branch path 
+     in a particular layout. (#340081)
+
   PERFORMANCE
 
    * Significant speed improvements when no (old) tags have to be fetched. Requires 
